Sandbox/07-04-2025/force-app/main/default/objects/Revenue_vs_Targets__c/Revenue_vs_Targets__c.object-meta.xml
<CustomObject>
    <label>Revenue vs Targets</label>
    <nameField>
        <displayFormat>RT-{YYYY}{MM}{0000}</displayFormat>
        <label>Revenue vs Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue vs Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>