Sandbox/07-04-2025/force-app/main/default/objects/Revenue_vs_Targets__c/fields/Actuals__c.field-meta.xml
<CustomField>
    <fullName>Actuals__c</fullName>
    <label>Actuals</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>