Sandbox/07-04-2025/force-app/main/default/objects/Revenue_vs_Targets__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>