Sandbox/07-04-2025/force-app/main/default/objects/Revenue_vs_Targets__c/fields/Week_4_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Week_4_Forecast__c</fullName>
    <label>Week 4 Forecast</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>